--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
 <script>
 const newsEl = document.getElementById("news");
-const API_URL = "https://proxy-production-b9d6.up.railway.app/news";
+const API_URL = "https://proxy2-production-01e2.up.railway.app/news";
 
 let pendingNews = null;
 
