--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
 <script>
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
-const API_URL = "/news";
-const TTS_URL = "/news-tts";
+const API_URL = "https://proxy2-production-b5a7.up.railway.app/news";
+const TTS_URL = "https://proxy2-production-b5a7.up.railway.app/news-tts";
 
 let pendingNews = null;
 
