--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,12 @@
 <script>
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
-const API_URL = "https://proxy2-production-b5a7.up.railway.app/news";
-const TTS_URL = "https://proxy2-production-b5a7.up.railway.app/news-tts";
+const API_URL = window.location.origin + "https://proxy2-production-b5a7.up.railway.app/news";
+const TTS_URL = window.location.origin + "https://proxy2-production-b5a7.up.railway.app/news-tts";
 
 let pendingNews = null;
 
+// 뉴스 가져오기
 async function loadNews() {
   try {
     const res = await fetch(API_URL);
@@ -59,6 +60,7 @@ async function loadNews() {
   } catch (err) { console.error("뉴스 불러오기 실패", err); }
 }
 
+// 스크롤 시작
 function startScroll(text) {
   newsEl.textContent = text;
   const wrapperWidth = newsEl.parentElement.offsetWidth;
@@ -74,9 +76,26 @@ function startScroll(text) {
   });
 }
 
-function playTTS() {
-  audioEl.src = TTS_URL;
-  audioEl.play().catch(err => console.warn("자동 재생 실패:", err));
+// 긴 뉴스 TTS 자동 재생
+async function playTTS() {
+  try {
+    const res = await fetch(TTS_URL);
+    const data = await res.json();
+    const urls = data.urls;
+    if (!urls || urls.length === 0) return;
+
+    let index = 0;
+    audioEl.src = urls[index];
+    audioEl.play();
+
+    audioEl.onended = () => {
+      index++;
+      if (index < urls.length) {
+        audioEl.src = urls[index];
+        audioEl.play();
+      }
+    };
+  } catch (err) { console.error("TTS 재생 실패", err); }
 }
 
 window.addEventListener("load", loadNews);
