--- a/public/index.html
+++ b/public/index.html
@@ -2,67 +2,125 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>뉴스 스크롤</title>
+<title>뉴스</title>
 <style>
   body {
     margin: 0;
-    background: black;
-    color: white;
-    font-size: 28px;
-    font-weight: bold;
+    background: transparent;
     overflow: hidden;
   }
-  #newsWrapper {
-    position: fixed;
-    top: 0;
-    width: 100%;
+
+  #wrapper {
     white-space: nowrap;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translateY(-8px);
+    width: 100vw;
+    height: 40px;
+    z-index: 9999;
   }
+
   #news {
     display: inline-block;
-    padding-left: 100%;
-    animation: scroll 20s linear infinite;
+    font-size: 28px;
+    color: white;
+    font-weight: bold;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 
+                 -1px -1px black, -1px 1px black, 1px -1px black, 1px 1px black;
+    will-change: transform;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
   }
+
   @keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
+    from { transform: translateX(100vw); }
+    to { transform: translateX(-100%); }
   }
 </style>
 </head>
 <body>
-<div id="newsWrapper">
+<div id="wrapper">
   <div id="news">뉴스 로딩 중...</div>
 </div>
 
 <script>
+const newsEl = document.getElementById("news");
+const NEWS_API = "/news";
+const TTS_API = "/news-tts";
+
+let pendingNews = null;
+
+// 뉴스 불러오기
 async function loadNews() {
-  const newsEl = document.getElementById("news");
   try {
-    const response = await fetch("https://proxy2-production-b5a7.up.railway.app/news");
-    if (!response.ok) throw new Error("뉴스 불러오기 실패");
-    const data = await response.json();
-
-    // 예: data가 { news: "뉴스1 | 뉴스2 | 뉴스3" } 형식이라 가정
+    const res = await fetch(NEWS_API);
+    const data = await res.json();
     if (data.news) {
-      newsEl.textContent = data.news;
-    } else {
-      newsEl.textContent = "뉴스 데이터가 없습니다.";
+      pendingNews = data.news;
+      startScroll(pendingNews);
+      playTTS(pendingNews);
     }
-
-    // 애니메이션 다시 시작
-    newsEl.style.animation = "none";
-    newsEl.offsetHeight; // reflow
-    newsEl.style.animation = "scroll 20s linear infinite";
-
   } catch (err) {
     console.error("뉴스 불러오기 실패", err);
-    newsEl.textContent = "뉴스 불러오기 실패";
   }
 }
 
-// 페이지 로드 후 뉴스 불러오기
-window.addEventListener("load", loadNews);
+// CSS 스크롤
+function startScroll(text) {
+  newsEl.textContent = text;
+
+  const wrapperWidth = newsEl.parentElement.offsetWidth;
+  const textWidth = newsEl.offsetWidth;
+  const speed = 100; // px/sec
+  const duration = (wrapperWidth + textWidth) / speed;
+
+  newsEl.style.animationDuration = `${duration}s`;
+
+  newsEl.addEventListener("animationend", function handler() {
+    newsEl.removeEventListener("animationend", handler);
+    pendingNews = null;
+    loadNews(); // 끝나면 서버 갱신
+  });
+
+  newsEl.style.animation = "none";
+  newsEl.offsetHeight; // 리플로우
+  newsEl.style.animation = `scroll linear ${duration}s 1`;
+}
+
+// TTS 재생 (긴 뉴스 순차 재생)
+async function playTTS(text) {
+  try {
+    const res = await fetch(TTS_API);
+    const data = await res.json();
+    if (!data.urls || !data.urls.length) return;
+
+    let index = 0;
+    const audio = new Audio();
+
+    audio.addEventListener("ended", () => {
+      index++;
+      if (index < data.urls.length) {
+        audio.src = data.urls[index];
+        audio.play();
+      }
+    });
+
+    audio.src = data.urls[index];
+    audio.play();
+  } catch (err) {
+    console.error("TTS 재생 실패", err);
+  }
+}
+
+// 초기 실행
+loadNews();
 </script>
 </body>
 </html>
