--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
 
 <script>
 const newsEl = document.getElementById("news");
-const NEWS_API = "/news";
-const TTS_API = "/news-tts";
+const NEWS_API = "https://proxy2-production-b5a7.up.railway.app/news";
+const TTS_API = "https://proxy2-production-b5a7.up.railway.app/news-tts";
 
 let pendingNews = null;
 
