--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
 
-const NEWS_API = "/news";
-const TTS_API = "/news-tts";
+const NEWS_API = "https://proxy2-production-b5a7.up.railway.app/news";
+const TTS_API = "https://proxy2-production-b5a7.up.railway.app/news-tts";
 
 let pendingNews = null;
 
