--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     width: 100vw;
     height: 40px;
     z-index: 9999;
+    display: none; /* 처음엔 숨김 */
   }
 
   #news {
@@ -43,18 +44,37 @@
     from { transform: translateX(100vw); }
     to { transform: translateX(-100%); }
   }
+
+  #startBtn {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    padding: 12px 24px;
+    background: #ff4444;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    z-index: 10000;
+  }
 </style>
 </head>
 <body>
+<button id="startBtn">뉴스 시작하기</button>
+
 <div id="wrapper">
   <div id="news">뉴스 로딩 중...</div>
 </div>
 
-<audio id="ttsAudio" autoplay muted playsinline></audio>
+<audio id="ttsAudio" playsinline></audio>
 
 <script>
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
+const startBtn = document.getElementById("startBtn");
+const wrapperEl = document.getElementById("wrapper");
 
 const NEWS_API = "https://proxy2-production-b5a7.up.railway.app/news";
 const TTS_API = "https://proxy2-production-b5a7.up.railway.app/news-tts";
@@ -90,7 +110,7 @@ function startScroll(text) {
   newsEl.addEventListener("animationend", function handler() {
     newsEl.removeEventListener("animationend", handler);
     pendingNews = null;
-    loadNews(); // 한 바퀴 끝나면 서버 갱신
+    loadNews(); // 한 바퀴 끝나면 다시 갱신
   });
 
   newsEl.style.animation = "none";
@@ -98,7 +118,7 @@ function startScroll(text) {
   newsEl.style.animation = `scroll linear ${duration}s 1`;
 }
 
-// TTS 재생 (자동재생용 URL에 autoplay=1&mute=0 적용)
+// TTS 재생
 async function playTTS() {
   try {
     const res = await fetch(TTS_API);
@@ -106,14 +126,13 @@ async function playTTS() {
     if (!data.urls || data.urls.length === 0) return;
 
     let index = 0;
-
-    audioEl.src = `${data.urls[index]}`;
+    audioEl.src = `${data.urls[index]}?autoplay=1&mute=0`;
     audioEl.play();
 
     audioEl.onended = () => {
       index++;
       if (index < data.urls.length) {
-        audioEl.src = `${data.urls[index]}`;
+        audioEl.src = `${data.urls[index]}?autoplay=1&mute=0`;
         audioEl.play();
       }
     };
@@ -122,8 +141,12 @@ async function playTTS() {
   }
 }
 
-// 초기 실행
-loadNews();
+// 버튼 클릭 시 실행
+startBtn.addEventListener("click", () => {
+  startBtn.style.display = "none";  // 버튼 숨기기
+  wrapperEl.style.display = "block"; // 뉴스 표시
+  loadNews(); // 뉴스와 음성 시작
+});
 </script>
 </body>
 </html>
