--- a/public/index.html
+++ b/public/index.html
@@ -126,13 +126,13 @@ async function playTTS() {
     if (!data.urls || data.urls.length === 0) return;
 
     let index = 0;
-    audioEl.src = `${data.urls[index]}?autoplay=1&mute=0`;
+    audioEl.src = `${data.urls[index]}&autoplay=1&mute=0`;
     audioEl.play();
 
     audioEl.onended = () => {
       index++;
       if (index < data.urls.length) {
-        audioEl.src = `${data.urls[index]}?autoplay=1&mute=0`;
+        audioEl.src = `${data.urls[index]}&autoplay=1&mute=0`;
         audioEl.play();
       }
     };
