--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <style>
   body {
     margin: 0;
-    background: transparent;
+    background: black;
     overflow: hidden;
   }
 
@@ -18,7 +18,6 @@
     left: 0;
     width: 100vw;
     height: 40px;
-    z-index: 9999;
   }
 
   #news {
@@ -32,7 +31,6 @@
     top: 0;
     white-space: nowrap;
     will-change: transform;
-    backface-visibility: hidden;
   }
 
   @keyframes scroll {
@@ -52,8 +50,8 @@
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
 
-const NEWS_API = "https://proxy2-production-b5a7.up.railway.app/news";
-const TTS_API = "https://proxy2-production-b5a7.up.railway.app/news-tts";
+const NEWS_API = "/news";
+const TTS_API = "/news-tts";
 
 // 뉴스 불러오기
 async function loadNews() {
@@ -79,26 +77,20 @@ async function startScrollAndTTS(text) {
   audioEl.pause();
   audioEl.currentTime = 0;
 
-  // mp3 로딩 후 재생 준비
   audioEl.onloadedmetadata = () => {
     const duration = audioEl.duration;
-
-    // 스크롤 속도 계산
     const wrapperWidth = newsEl.parentElement.offsetWidth;
     const textWidth = newsEl.offsetWidth;
     const distance = wrapperWidth + textWidth;
-    
-    newsEl.style.animation = "none"; // 기존 애니메이션 초기화
-    newsEl.offsetHeight; // 리플로우 강제
+
+    newsEl.style.animation = "none";
+    newsEl.offsetHeight;
     newsEl.style.animation = `scroll ${duration}s linear 1`;
 
-    // 3초 딜레이 후 TTS 재생
-    setTimeout(() => {
-      audioEl.play().catch(err => console.warn(err));
-    }, 3000);
+    // TTS 재생
+    audioEl.play().catch(err => console.warn(err));
   };
 
-  // 스크롤 끝나면 다음 뉴스
   newsEl.addEventListener("animationend", function handler() {
     newsEl.removeEventListener("animationend", handler);
     loadNews();
