--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
 
-const NEWS_API = "/news";
-const TTS_API = "/news-tts";
+const NEWS_API = "https://proxy2-production-b5a7.up.railway.app/news";
+const TTS_API = "https://proxy2-production-b5a7.up.railway.app/news-tts";
 
 // 뉴스 불러오기
 async function loadNews() {
