--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>뉴스 TTS 스크롤</title>
+<title>뉴스여자음성</title>
 <style>
 body {
   margin: 0;
@@ -37,7 +37,7 @@ body {
 </style>
 </head>
 <body>
-555<div id="wrapper">
+888<div id="wrapper">
   <div id="news">뉴스 로딩 중...</div>
 </div>
 
